--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,16 +1,24 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Python App
 
 on:
   push:
     branches: [ Master ]
   pull_request:
     branches: [ Master ]
+  workflow_dispatch:
+    inputs:
+      file:
+       description: 'File Name(s)' 
+       
+       default: '.'
+       
+       required: true
 
 jobs:
-  build:
+  Lint:
 
     runs-on: ubuntu-latest
 
