--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
   - python3 -m pip install -r requirements.txt
 # command to run tests
 script:
-  - python3 .runtest.py
+  - python3 .runtests.py
